--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
 
   <div class="product">
     <img src="https://raw.githubusercontent.com/radixrandom1000/radixrandom1000.github.io/refs/heads/main/Capture%20d%E2%80%99%C3%A9cran%20du%202025-05-28%2023-43-29.png" alt="Produit 2">
-    <h3>Ecstasy (Indisponible pour le moment mais arrive bientôt)</h3>
+    <h3>Ecstasy</h3>
     <p><strong>Prix : 150€ l’unités / 1500€ le paquet de 10</strong></p>
-          <label>(Indisponible pour le moment, si vous sélectionnez une de ces options, elle ne sera pas envoyée.) Ecstasy (paquets/unités) :</label>
+          <label>Ecstasy (paquets/unités) :</label>
   <select name="Ecstasy" id="Ecstasy">
     <option value="">-- Choisir --</option>
     <option value="paquets">un paquet</option>
